Harden auth flows and add password reset email