@@ -1,14 +1,14 @@
 package com.deepbark.config;
 
-import com.deepbark.security.CustomUserDetailsService;
 import com.deepbark.security.JwtAuthenticationEntryPoint;
 import com.deepbark.security.JwtAuthenticationFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -19,22 +19,29 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(
+@EnableMethodSecurity(
         securedEnabled = true,
-        jsr250Enabled = true,
-        prePostEnabled = true
+        jsr250Enabled = true
 )
 public class SecurityConfig {
 
-    @Autowired
-    CustomUserDetailsService customUserDetailsService;
+    @Value("#{'${spring.web.cors.allowed-origins:*}'.split(',')}")
+    private List<String> allowedOrigins;
+
+    @Value("#{'${spring.web.cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS}'.split(',')}")
+    private List<String> allowedMethods;
+
+    @Value("#{'${spring.web.cors.allowed-headers:*}'.split(',')}")
+    private List<String> allowedHeaders;
+
+    @Value("${spring.web.cors.allow-credentials:false}")
+    private boolean allowCredentials;
 
     @Autowired
     private JwtAuthenticationEntryPoint unauthorizedHandler;
@@ -62,9 +69,10 @@ public class SecurityConfig {
                 .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/", "/favicon.ico", "/**").permitAll()
-                        .requestMatchers("/api/user/checkUsernameAvailability", "/api/user/checkEmailAvailability").permitAll()
-                        .requestMatchers("/api/breeds/**", "/api/health").permitAll()
+                        .requestMatchers("/", "/favicon.ico", "/error").permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/users/check-username", "/api/users/check-email").permitAll()
+                        .requestMatchers("/api/breeds/**", "/api/health", "/api/analyze", "/api/mix-dogs/**").permitAll()
                         .anyRequest().authenticated()
                 );
 
@@ -76,12 +84,28 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        
+        List<String> normalizedOrigins = normalizeValues(allowedOrigins);
+
+        if (normalizedOrigins.contains("*")) {
+            configuration.setAllowedOriginPatterns(List.of("*"));
+            configuration.setAllowCredentials(false);
+        } else {
+            configuration.setAllowedOrigins(normalizedOrigins);
+            configuration.setAllowCredentials(allowCredentials);
+        }
+
+        configuration.setAllowedMethods(normalizeValues(allowedMethods));
+        configuration.setAllowedHeaders(normalizeValues(allowedHeaders));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    private List<String> normalizeValues(List<String> values) {
+        return values.stream()
+                .map(String::trim)
+                .filter(value -> !value.isEmpty())
+                .collect(Collectors.toList());
     }
 }
